[gd_scene load_steps=15 format=3 uid="uid://c0go1rlnp6vju"]

[ext_resource type="Script" path="res://scenes/map_editor/ui.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://k2hh8e6861ja" path="res://scenes/map_editor/tile_view.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://5bep6mdci41m" path="res://scenes/ui/radial/radial.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://b1tod34kr8cro" path="res://scenes/ui/map_picker/picker.tscn" id="4"]
[ext_resource type="PackedScene" uid="uid://b68vtard4p6s3" path="res://scenes/ui/minimap/minimap.tscn" id="5"]
[ext_resource type="Theme" path="res://assets/gui/ui_theme.tres" id="6"]
[ext_resource type="PackedScene" uid="uid://cbg465a8j5ejh" path="res://scenes/map_editor/story/story_editor.tscn" id="6_n424n"]
[ext_resource type="PackedScene" uid="uid://bfxvqvxbfeppg" path="res://scenes/ui/menu/controls/editor.tscn" id="7"]

[sub_resource type="Animation" id="1"]
resource_name = "hide"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("wrapper:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("wrapper:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1e-05, 1e-05)]
}

[sub_resource type="Animation" id="2"]
resource_name = "show"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("wrapper:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("wrapper:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gsio6"]
_data = {
"hide": SubResource("1"),
"show": SubResource("2")
}

[sub_resource type="Animation" id="3"]
resource_name = "hide"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.5, 0.5), Vector2(1e-05, 1e-05)]
}

[sub_resource type="Animation" id="4"]
resource_name = "show"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(0.5, 0.5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_46jqh"]
_data = {
"hide": SubResource("3"),
"show": SubResource("4")
}

[node name="ui" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("6")
script = ExtResource("1")

[node name="position" type="MarginContainer" parent="."]
layout_mode = 0
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = -290.0
offset_right = 150.0
offset_bottom = -265.162
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="label" type="Label" parent="position"]
layout_mode = 2
text = "[0, 0]"

[node name="map_name" type="MarginContainer" parent="."]
visible = false
layout_mode = 0
offset_right = 30.0
offset_bottom = 54.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="background" type="ColorRect" parent="map_name"]
layout_mode = 2
color = Color(0.196078, 0.196078, 0.196078, 0.823529)

[node name="inner" type="MarginContainer" parent="map_name"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 0

[node name="label" type="Label" parent="map_name/inner"]
layout_mode = 2

[node name="edge_pan" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="left" type="Control" parent="edge_pan"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 30.0
grow_vertical = 2
mouse_filter = 1

[node name="right" type="Control" parent="edge_pan"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -29.9999
offset_right = 0.00012207
grow_horizontal = 0
grow_vertical = 2
mouse_filter = 1

[node name="top" type="Control" parent="edge_pan"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_right = 0.00012207
offset_bottom = 30.0
grow_horizontal = 2
mouse_filter = 1

[node name="bottom" type="Control" parent="edge_pan"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -30.0
offset_right = 0.00012207
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 1

[node name="tile" type="MarginContainer" parent="."]
layout_mode = 0
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -267.0
offset_top = -236.0
offset_right = -67.0
offset_bottom = -36.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="wrapper" type="Node2D" parent="tile"]
position = Vector2(100, 100)

[node name="tile_view_prev" parent="tile/wrapper" instance=ExtResource("2")]
position = Vector2(-100, -30)
viewport_size = 40
is_side_tile = true

[node name="tile_type_next" parent="tile/wrapper" instance=ExtResource("2")]
position = Vector2(0, -130)
viewport_size = 40
is_side_tile = true

[node name="tile_type_prev" parent="tile/wrapper" instance=ExtResource("2")]
position = Vector2(0, 70)
viewport_size = 40
is_side_tile = true

[node name="tile_view_next" parent="tile/wrapper" instance=ExtResource("2")]
position = Vector2(100, -30)
viewport_size = 40
is_side_tile = true

[node name="tile_view_current" parent="tile/wrapper" instance=ExtResource("2")]
position = Vector2(0, -30)

[node name="animations" type="AnimationPlayer" parent="tile"]
libraries = {
"": SubResource("AnimationLibrary_gsio6")
}
speed_scale = 4.0

[node name="radial" type="MarginContainer" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0

[node name="radial" parent="radial" instance=ExtResource("3")]

[node name="picker" type="MarginContainer" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="picker" parent="picker" instance=ExtResource("4")]

[node name="story" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="StoryEditor" parent="story" instance=ExtResource("6_n424n")]
visible = false
position = Vector2(20, 20)

[node name="controls" type="MarginContainer" parent="."]
layout_mode = 0
anchor_left = 1.0
anchor_right = 1.0
offset_left = -720.0
offset_right = 80.0
offset_bottom = 600.0
scale = Vector2(0.9, 0.9)
mouse_filter = 2

[node name="editor" parent="controls" instance=ExtResource("7")]
visible = false
layout_mode = 2

[node name="minimap" parent="." instance=ExtResource("5")]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 140.0
offset_top = -140.0
offset_right = 180.0
offset_bottom = -100.0
grow_vertical = 0
scale = Vector2(0.5, 0.5)

[node name="animations" type="AnimationPlayer" parent="minimap"]
libraries = {
"": SubResource("AnimationLibrary_46jqh")
}
speed_scale = 4.0
